--- a/Schema-Driven Form Builder with live Validation/index.html
+++ b/Schema-Driven Form Builder with live Validation/index.html
@@ -15,7 +15,7 @@
             from server.</button>
         <div id="output"></div><br>
     </div>
-    <script src="xhr.js"></script>
+    <script src="client.js"></script>
 </body>
 
 </html>
